<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="me.muchori.joseph.android_mvvm_login.viewmodels.auth.AuthViewModel" />
    </data>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.fragments.auth.login.LoginFragment">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="180dp"
                android:fontFamily="@font/roboto_bold"
                android:includeFontPadding="false"
                android:text="@string/welcome"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/login_below_to_proceed"
                android:textAllCaps="false"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/textView15"
                tools:layout_editor_absoluteX="24dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mailTil"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:layout_marginTop="30dp"
                android:textColorHint="@color/colorBlack"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@+id/textView16">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorBlack" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passTil"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:textColorHint="@color/colorBlack"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@+id/mailTil"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:textColor="@color/colorBlack" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/passtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/forgot_password"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorBlack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passTil" />


            <TextView
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/btn2"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/passtext" />


            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/don_t_have_an_account_register"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorBlack"
                android:layout_marginTop="150dp"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login" />

            <TextView
                android:id="@+id/register_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/register"
                android:textAllCaps="false"
                android:layout_marginTop="150dp"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/textView17"
                app:layout_constraintTop_toBottomOf="@+id/login" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>