<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/onboardingRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/oboarding_main_scene">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/slider"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator
        android:id="@+id/page_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:dotsColor="@color/colorPrimary"
        app:dotsCornerRadius="2dp"
        app:dotsSize="12dp"
        app:dotsSpacing="5dp"
        app:dotsStrokeColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/guideline" />


    <TextView
        android:id="@+id/nextBtn"
        style="@style/Widget.MaterialComponents.Button.TextButton.OnBoardTextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_16"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/next"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/page_indicator" />

    <TextView
        android:id="@+id/startBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_16"
        android:background="@drawable/btn2"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="@font/roboto_bold"
        android:padding="15dp"
        android:paddingStart="@dimen/padding_30"
        android:paddingTop="@dimen/margin_16"
        android:paddingEnd="@dimen/padding_30"
        android:paddingBottom="@dimen/margin_16"
        android:text="@string/get_started"
        android:textColor="@color/white"
        app:cornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/page_indicator" />

    <TextView
        android:id="@+id/skipBtn"
        style="@style/Widget.MaterialComponents.Button.TextButton.OnBoardTextButton"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_16"
        android:text="@string/skip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/page_indicator" />

</androidx.constraintlayout.motion.widget.MotionLayout>